# openclaw-desktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  Onboarding.tsx  icons.tsx  styles.css  useGatewayStatus.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: openclaw-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/ui/: badge.tsx  progress.tsx  toggle.tsx
src/lib/: config.ts
src/pages/: Chat.tsx  ConnectedApps.tsx  Settings.tsx  Skills.tsx
